# PandaGenieSource

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING_CN.md  README.md  README_CN.md  modules.json
module-dev-toolkit/: MODULE_DEVELOPMENT_GUIDE.md  init_dev_signing.ps1  init_module_signing.ps1  list_keystore_info.ps1  mk_module.ps1
modules/: app_manager.mod  archive.mod  battery.mod  calculator.mod  clipboard.mod  color_picker.mod  compass.mod  contacts.mod  device_info.mod  farming_game.mod  file_stats.mod  filemanager.mod  flashlight.mod  fortune.mod  gomoku_game.mod  hello_world.mod  image_tools.mod  led_banner.mod  link_parser.mod  magic_dice.mod  network_tools.mod  notes.mod  ocr.mod  password_gen.mod  qrcode.mod  reminder.mod  signature_checker.mod  snake_game.mod  sudoku_game.mod  system_cleaner.mod  tetris_game.mod  text_tools.mod  tictactoe_game.mod  translator.mod  unit_converter.mod  url_codec.mod  weather.mod
source/: common.css
source/app_manager/: how-create-app_manager.html  index.html  manifest.json
source/archive/: build_native.ps1  how-create-archive.html  index.html  manifest.json
source/archive/native/: CMakeLists.txt
source/archive/native/include/: archive_module.h  miniz.h
source/archive/native/src/: archive_jni.cpp  archive_module.cpp  miniz.cpp
source/filemanager/native/: CMakeLists.txt
source/filemanager/native/include/: filemanager.h
source/filemanager/native/src/: filemanager.cpp  filemanager_jni.cpp
tools/: README.md  build_all_native.ps1  pack_modules.ps1  publish_module.ps1  upload_module.mjs  upload_module_direct.mjs
(+158 files in other folders)
